--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
         android:textSize="10dp"/>
 
     <EditText
+        android:inputType="textPassword"
         android:id="@+id/editTxtPw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
