--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,100 +12,63 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#B99B6B"
-        android:hint="Coffe Shop"
+        android:text="Coffe Shop"
         android:textStyle="bold"
         android:textSize="60dp"
         android:gravity="center"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/space1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@+id/bg"
-        android:textSize="50dp"/>
-
-    <TextView
         android:id="@+id/Lgn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
         android:textColor="#B99B6B"
         android:textSize="40dp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/space1"/>
-
-    <TextView
-        android:id="@+id/space2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/Lgn"
-        android:textSize="30dp"/>
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/txtEmail"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
         android:textStyle="bold"
         android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/space2"/>
-
-    <TextView
-        android:id="@+id/space3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
-        android:textSize="10dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/Lgn"/>
 
     <EditText
         android:id="@+id/editTxtEmail"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/space3"
+        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
-        android:id="@+id/space4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"
-        android:textSize="20dp"/>
-
-    <TextView
         android:id="@+id/txtPw"
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
         android:textStyle="bold"
         android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/space4"/>
-
-    <TextView
-        android:id="@+id/space5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/txtPw"
-        android:textSize="10dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail"/>
 
     <EditText
         android:inputType="textPassword"
         android:id="@+id/editTxtPw"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/space5"
+        app:layout_constraintTop_toBottomOf="@+id/txtPw"
         tools:ignore="SpeakableTextPresentCheck" />
-
-    <TextView
-        android:id="@+id/space6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/editTxtPw"
-        android:textSize="30dp"/>
 
     <Button
         android:id="@+id/btnLogin"
@@ -115,6 +78,7 @@
         android:hint="Login"
         android:textStyle="bold"
         android:textSize="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/space6"/>
+        android:layout_marginTop="140dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtPw"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
